Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:19+0200\n"
+"PO-Revision-Date: 2010-05-25 13:21+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7382,6 +7382,8 @@ msgid ""
 "You can use MySQL wildcard characters (% and _), escape them if you want to "
 "use their literal instances, i.e. use 'my\\_db' and not 'my_db'"
 msgstr ""
+"MySQL wildcard characters (% und _) sind möglich , mit \\ wird die "
+"urspüngliche Bedeutung wiederhergestellt, d.h.  'my\\_db' und nicht 'my_db'"
 
 #: setup/lib/messages.inc.php:287
 msgid "Show only listed databases"
