--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:24+0200\n"
+"PO-Revision-Date: 2010-05-25 13:25+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7421,7 +7421,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:294
 msgid "Port on which MySQL server is listening, leave empty for default"
-msgstr ""
+msgstr "Port, auf dem der MySQL-Server horcht, leer lassen für Voreinstellung"
 
 #: setup/lib/messages.inc.php:295
 msgid "Server port"
