--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:28+0200\n"
+"PO-Revision-Date: 2010-05-25 13:29+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7479,6 +7479,8 @@ msgstr "Versionen automatisch erzeugen"
 #: setup/lib/messages.inc.php:305
 msgid "Defines the list of statements the auto-creation uses for new versions."
 msgstr ""
+"Legt die Liste der Statements fest, die die automatische Versionserstellung "
+"für neue Versionen verwendeet"
 
 #: setup/lib/messages.inc.php:306
 #| msgid "Statements"
