--- a/po/de.po
+++ b/po/de.po
@@ -7521,7 +7521,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:312
 msgid "Add DROP DATABASE"
-msgstr ""
+msgstr "DROP DATABASE hinzufügen"
 
 #: setup/lib/messages.inc.php:313
 msgid "You should use SSL connections if your web server supports it"
