--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-24 12:05+0200\n"
-"PO-Revision-Date: 2010-05-25 13:34+0200\n"
+"PO-Revision-Date: 2010-05-25 13:35+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7560,6 +7560,8 @@ msgid ""
 "Table to describe the display fields, leave blank for no support; suggested: "
 "[kbd]pma_table_info[/kbd]"
 msgstr ""
+"Tabelle zur Beschreibung der Anzeigefelder, leer lassen für keine "
+"Unterstützung; Vorschlag: [kbd]pma_table_info[/kbd]"
 
 #: setup/lib/messages.inc.php:321
 msgid "Display fields table"
