--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:37+0200\n"
+"PO-Revision-Date: 2010-05-25 13:38+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7625,6 +7625,8 @@ msgstr "Serverbezeichnung"
 msgid ""
 "Whether a user should be displayed a &quot;show all (records)&quot; button"
 msgstr ""
+"Soll dem Benutzer ein  &quot;show all (records)&quot; Button angezeigt "
+"werden?"
 
 #: setup/lib/messages.inc.php:330
 msgid "Allow to display all the rows"
