Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:40+0200\n"
+"PO-Revision-Date: 2010-05-25 13:43+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7638,6 +7638,10 @@ msgid ""
 "authentication mode because the password is hard coded in the configuration "
 "file; this does not limit the ability to execute the same command directly"
 msgstr ""
+"Bitte beachten, dass das Einschalten bei [kbd]config[/kbd] authentication "
+"mode keine Wirkung hat, da das Passwort in der Konfigurationsdatei steht. "
+"Dieses beschränkt nicht die Möglichkeit der direkten Ausführung des selben "
+"Befehls."
 
 #: setup/lib/messages.inc.php:332
 msgid "Show password change form"
