--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:43+0200\n"
+"PO-Revision-Date: 2010-05-25 13:44+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7645,7 +7645,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:332
 msgid "Show password change form"
-msgstr ""
+msgstr "Zeige Formular zur Passwort-Änderung"
 
 #: setup/lib/messages.inc.php:333
 msgid "Show create database form"
