Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:49+0200\n"
+"PO-Revision-Date: 2010-05-25 13:51+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7703,6 +7703,8 @@ msgid ""
 "If tooltips are enabled and a database comment is set, this will flip the "
 "comment and the real name"
 msgstr ""
+"Wenn \"tooltips\" eingeschaltet sind und Datenbank-Kommentare vorhanden sind, "
+"vertausch dies den Kommentar und den Namen"
 
 #: setup/lib/messages.inc.php:346
 msgid "Display database comment instead of its name"
