Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:51+0200\n"
+"PO-Revision-Date: 2010-05-25 13:55+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7717,6 +7717,10 @@ msgid ""
 "['LeftFrameTableSeparator'] directive, so only the folder is called like the "
 "alias, the table name itself stays unchanged"
 msgstr ""
+"Wird dies auf [kbd]nested[/kbd] gesetzt, so wird der Alias des "
+"Tabellennamens nur benutzt, um die Tabellen gemäß der "
+"$cfg['LeftFrameTableSeparator'] direktive zu teilen bzw. zu verschachteln. "
+"Nur der Ordner erhält den Alias, der Tabellename bleibt unverändert."
 
 #: setup/lib/messages.inc.php:348
 msgid "Display table comment instead of its name"
