--- a/po/de.po
+++ b/po/de.po
@@ -7735,7 +7735,7 @@ msgid ""
 "Mark used tables and make it possible to show databases with locked tables"
 msgstr ""
 "Markiere benutzte Tabellen und ermögliche die Anzeige von Tabellen mit "
-"\"locked\" Tabellen"
+"gesperrten Tabellen"
 
 #: setup/lib/messages.inc.php:351
 msgid "Skip locked tables"
