--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:57+0200\n"
+"PO-Revision-Date: 2010-05-25 13:59+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7746,6 +7746,8 @@ msgid ""
 "Suggest a database name on the &quot;Create Database&quot; form (if "
 "possible) or keep the text field empty"
 msgstr ""
+"Schlage (wenn möglich) einen Datenbank-Namen im &quot;Create Database&quot; "
+"Formular vor oder lasse das Textfeld leer"
 
 #: setup/lib/messages.inc.php:358
 msgid "Suggest new database name"
