--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 13:59+0200\n"
+"PO-Revision-Date: 2010-05-25 14:00+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7751,7 +7751,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:358
 msgid "Suggest new database name"
-msgstr ""
+msgstr "Schlage einen neuen Datenbank-Namen vor "
 
 #: setup/lib/messages.inc.php:359
 msgid "yes"
