--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 14:02+0200\n"
+"PO-Revision-Date: 2010-05-25 14:03+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7775,7 +7775,7 @@ msgstr "Liste der Vertrauenswürdigen Proxies für IP Filter"
 
 #: setup/lib/messages.inc.php:362
 msgid "Directory on server where you can upload files for import"
-msgstr ""
+msgstr "Verzeichnis auf dem Server zum Upload von zu importierenden Dateien"
 
 #: setup/lib/messages.inc.php:363
 msgid "Upload directory"
