--- a/po/de.po
+++ b/po/de.po
@@ -7783,7 +7783,7 @@ msgstr "Upload Verzeichnis"
 
 #: setup/lib/messages.inc.php:364
 msgid "Allow for searching inside the entire database"
-msgstr ""
+msgstr "Erlaube Suche in der gesammten Datenbank"
 
 #: setup/lib/messages.inc.php:365
 msgid "Use database search"
