--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 14:06+0200\n"
+"PO-Revision-Date: 2010-05-25 14:12+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -8325,6 +8325,9 @@ msgid ""
 "You can execute the dump by creating and using a temporary database. Please "
 "ensure that you have the privileges to do so."
 msgstr ""
+"Sie können die Ausgabe durch Erstellne und Benutzen einer temporären "
+"Datenbank realisieren. Bitte stellen Sie sicher, dass Sie die dafür "
+"benötigten Rechte besitzen."
 
 #: tbl_tracking.php:221
 msgid "Comment out these two lines if you do not need them."
