--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 14:12+0200\n"
+"PO-Revision-Date: 2010-05-25 14:13+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -8331,7 +8331,7 @@ msgstr ""
 
 #: tbl_tracking.php:221
 msgid "Comment out these two lines if you do not need them."
-msgstr ""
+msgstr "Kommentieren Sie diese beiden Zeilen aus, wenn Sie sie nicht benötigen"
 
 #: tbl_tracking.php:230
 msgid "SQL statements exported. Please copy the dump or execute it."
