Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 14:15+0200\n"
+"PO-Revision-Date: 2010-05-25 14:16+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7691,8 +7691,8 @@ msgstr "Zeige SQL Anfragen"
 #: setup/lib/messages.inc.php:343
 msgid "Allow to display database and table statistics (eg. space usage)"
 msgstr ""
-"Erlaube die Anzeige von Datenbank- und Tabellen-Statistiken, z.B. "
-"Platzbedarf"
+"Erlaube die Anzeige von Datenbank- und Tabellen-Statistiken,( z.B. "
+"Platzbedarf)"
 
 #: setup/lib/messages.inc.php:344
 msgid "Show statistics"
