--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 14:17+0200\n"
+"PO-Revision-Date: 2010-05-25 14:18+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7639,8 +7639,8 @@ msgid ""
 "file; this does not limit the ability to execute the same command directly"
 msgstr ""
 "Bitte beachten, dass das Einschalten bei [kbd]config[/kbd] authentication "
-"mode keine Wirkung hat, da das Passwort in der Konfigurationsdatei steht. "
-"Dieses beschränkt nicht die Möglichkeit der direkten Ausführung des selben "
+"mode keine Wirkung hat, da das Passwort in der Konfigurationsdatei steht; "
+"dieses beschränkt nicht die Möglichkeit der direkten Ausführung des selben "
 "Befehls."
 
 #: setup/lib/messages.inc.php:332
