Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 13:21+0200\n"
-"PO-Revision-Date: 2010-05-25 14:18+0200\n"
+"PO-Revision-Date: 2010-05-25 14:19+0200\n"
 "Last-Translator:  <torsten.funck@googlemail.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -7719,7 +7719,7 @@ msgid ""
 msgstr ""
 "Wird dies auf [kbd]nested[/kbd] gesetzt, so wird der Alias des "
 "Tabellennamens nur benutzt, um die Tabellen gemäß der "
-"$cfg['LeftFrameTableSeparator'] direktive zu teilen bzw. zu verschachteln. "
+"$cfg['LeftFrameTableSeparator'] Direktive zu teilen bzw. zu verschachteln. "
 "Nur der Ordner erhält den Alias, der Tabellename bleibt unverändert."
 
 #: setup/lib/messages.inc.php:348
