--- a/po/cs.po
+++ b/po/cs.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-25 13:21+0200\n"
+"POT-Creation-Date: 2010-05-25 14:28+0200\n"
 "PO-Revision-Date: 2010-05-25 14:23+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
@@ -418,9 +418,13 @@ msgid "Last check"
 msgstr "Poslední kontrola"
 
 #: db_printview.php:222 db_structure.php:480
-#, php-format
-msgid "%s table(s)"
-msgstr "%s tabulek"
+#, fuzzy, php-format
+#| msgid "%s table(s)"
+msgid "%s table"
+msgid_plural "%s tables"
+msgstr[0] "%s tabulek"
+msgstr[1] "%s tabulek"
+msgstr[2] "%s tabulek"
 
 #: db_qbe.php:29 libraries/Message.class.php:191
 #: libraries/display_tbl.lib.php:1981 libraries/sql_query_form.lib.php:140
